@@ -14,6 +14,10 @@
 			<property name="name" nameLabel="Image_Viewer_Public_property_name" type="string" />
 			<property name="frame" nameLabel="Image_Viewer_Public_property_frames" type="string" />
 		</property>
+		<property name="Alternative texts" nameLabel="Image_Viewer_Public_property_alternative_texts" type="list">
+			<property name="Alternative text" nameLabel="Image_Viewer_Public_property_alternative_text" type="text" />
+			<property name="frame" nameLabel="Image_Viewer_Public_property_frames" type="string" />
+		</property>
 		<property name="isClickDisabled" nameLabel="Image_Viewer_Public_property_is_click_disabled" type="boolean" />
 		<property name="Labels" nameLabel="Image_Viewer_Public_property_labels" type="list">
 			<property name="Text" nameLabel="Image_Viewer_Public_property_text" type="string" isLocalized="true" />
@@ -32,5 +36,6 @@
 		<property name="Random frame" nameLabel="Image_Viewer_Public_property_random_frame" type="boolean" />
 		<property name="Initial frame" nameLabel="Image_Viewer_Public_property_initial_frame" type="string" />
 		<property name="Show frame counter" nameLabel="Image_Viewer_Public_property_show_frame_counter" type="boolean" />
+		<property name="langAttribute"  nameLabel="Image_Viewer_Public_property_lang_attribute" type="string" />
 	</model>
 </addon>
