@@ -778,6 +778,8 @@ var ice_dictionary_bl = {
 	"Image_Viewer_Public_property_text": "Текст",
 	"Image_Viewer_Public_property_top": "Горе",
 	"Image_Viewer_Public_property_left": "Ляво",
+	"Image_Viewer_Public_property_alternative_texts": "Alternative texts",
+	"Image_Viewer_Public_property_alternative_text": "Alternative text",
 	"Image_Viewer_Public_property_show_watermark": "Покажи воден знак",
 	"Image_Viewer_Public_property_watermark_color": "Цвят на водния знак",
 	"Image_Viewer_Public_property_watermark_opacity": "Прозрачност на водния знак",
@@ -806,6 +808,7 @@ var ice_dictionary_bl = {
 	"Image_Viewer_Button_Controlled_Public_property_top": "Горе",
 	"Image_Viewer_Button_Controlled_Public_property_left": "Ляво",
 	"Image_Viewer_Button_Controlled_Public_property_show_frame": "Покажи кадър",
+	"Image_Viewer_Public_property_lang_attribute": "Lang attribute",
 	"Layered_Image_info": "Позволява вмъкването на изображения с няколко слоя в презентацията, като всеки слой представлява изображение с прозрачни елементи. При стартиране на плъгина всеки слой на изображението по подразбиране е скрит, като е възможно потребителят да избере кой слой кога да се покаже.",
 	"Layered_Image_name": "Наслоено изображение",
 	"Layered_Image_property_base_image": "Основно изображение",
