@@ -807,6 +807,9 @@ var ice_dictionary_en = {
 	"Image_Viewer_Button_Controlled_Public_property_top": "Top",
 	"Image_Viewer_Button_Controlled_Public_property_left": "Left",
 	"Image_Viewer_Button_Controlled_Public_property_show_frame": "Show frame",
+	"Image_Viewer_Public_property_alternative_texts": "Alternative texts",
+	"Image_Viewer_Public_property_alternative_text": "Alternative text",
+	"Image_Viewer_Public_property_lang_attribute": "Lang attribute",
 	"Layered_Image_info": "Enables to embed multilayered images into a presentation, where each layer is represented by an image with transparent elements. By default, each image layer is hidden at the addon's start and it is possible to select the layer to be displayed at a given stage.",
 	"Layered_Image_name": "Layered Image",
 	"Layered_Image_property_base_image": "Base image",
