@@ -921,6 +921,9 @@ var ice_dictionary_fr = {
     "Image_Viewer_Button_Controlled_Public_property_top": "Haut",
     "Image_Viewer_Button_Controlled_Public_property_left": "Gauche",
     "Image_Viewer_Button_Controlled_Public_property_show_frame": "Afficher l'écran",
+	"Image_Viewer_Public_property_lang_attribute": "Lang attribute",
+	"Image_Viewer_Public_property_alternative_texts": "Alternative texts",
+	"Image_Viewer_Public_property_alternative_text": "Alternative text",
     "Layered_Image_info": "Permet d'inclure des images multicouches dans une présentation, où chaque couche est représentée par une image avec des éléments transparents. Par défaut, chaque couche d'image est cachée au lancement du module externe et il est possible de sélectionner la couche à afficher à un stade donné.",
     "Layered_Image_name": "Image multi-couches",
     "Layered_Image_property_base_image": "Image de base",
