@@ -921,6 +921,9 @@ var ice_dictionary_mx = {
 	"Image_Viewer_Button_Controlled_Public_property_top": "Arriba",
 	"Image_Viewer_Button_Controlled_Public_property_left": "Izquierda",
 	"Image_Viewer_Button_Controlled_Public_property_show_frame": "Mostrar la pantalla",
+	"Image_Viewer_Public_property_lang_attribute": "Lang attribute",
+	"Image_Viewer_Public_property_alternative_texts": "Alternative texts",
+	"Image_Viewer_Public_property_alternative_text": "Alternative text",
 	"Layered_Image_info": "Permite añadir las imágenes de varias capas a la presentación, donde cada capa es una imagen con partes transparentes. Por defecto, cada capa de imagen está escondida en principio y luego hay que seleccionarla para mostrarla en una etapa dada.",
 	"Layered_Image_name": "Imagen con capas",
 	"Layered_Image_property_base_image": "Imagen base",
