@@ -920,6 +920,9 @@ var ice_dictionary_pl = {
 	"Image_Viewer_Button_Controlled_Public_property_top": "Od góry",
 	"Image_Viewer_Button_Controlled_Public_property_left": "Od lewej",
 	"Image_Viewer_Button_Controlled_Public_property_show_frame": "Pokaż klatkę",
+	"Image_Viewer_Public_property_lang_attribute": "Lang attribute",
+	"Image_Viewer_Public_property_alternative_texts": "Alternative texts",
+	"Image_Viewer_Public_property_alternative_text": "Alternative text",
 	"Layered_Image_info" : "Pozwala na wstawienie do prezentacji wielowarstwowych obrazów, w których każda warstwa jest reprezentowana przez obrazek zawierający elementy transparentne. Domyślnie wszystkie warstwy są ukryte podczas uruchomienia Addonu i można wybrać, która warstwa ma być wyświetlona na danym etapie.",
 	"Layered_Image_name" : "Obraz warstwowy",
 	"Layered_Image_property_base_image": "Obraz podstawowy",
